--- a/app/bower.json
+++ b/app/bower.json
@@ -6,6 +6,7 @@
   "homepage": "",
   "private": true,
   "dependencies": {
-    "angular-notify": "^2.5.1"
+    "angular-notify": "^2.5.1",
+    "ng-idle": "^1.3.2"
   }
 }
